--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
             <div class="infoText interface-txt" id="exp">EXP: 1</div>
             <div class="infoText interface-txt" id="lvl">LvL: 1</div>
         </div>
-        <div class="healthContainer interface-txt">
+        <div class="itemContainer interface-txt">
             Health:
             <div class="health" id="health"></div>
+        </div>
+        <div class="itemContainer interface-txt">
+            Stones:
+            <div class="health" id="stones"></div>
         </div>
     </div>
     <div class="map" id="map"></div>
@@ -36,5 +40,6 @@
     <div id="console">
 
     </div>
+    <button onclick="ThrowStone('Up')">Up</button>
 </body>
 </html>
